; ModuleID = '/home/carl/AnghaBench/lede/package/utils/fritz-tools/src/extr_fritz_tffs_read.c_find_entry.c'
source_filename = "/home/carl/AnghaBench/lede/package/utils/fritz-tools/src/extr_fritz_tffs_read.c_find_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tffs_entry = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }

@tffs_size = common dso_local global i64 0, align 8
@TFFS_ID_END = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, %struct.tffs_entry*)* @find_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_entry(i32* %0, i64 %1, %struct.tffs_entry* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.tffs_entry*, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.tffs_entry* %2, %struct.tffs_entry** %7, align 8
  store i64 0, i64* %8, align 8
  br label %9

9:                                                ; preds = %43, %3
  %10 = load i32*, i32** %5, align 8
  %11 = load i64, i64* %8, align 8
  %12 = load %struct.tffs_entry*, %struct.tffs_entry** %7, align 8
  %13 = call i32 @parse_entry(i32* %10, i64 %11, %struct.tffs_entry* %12)
  %14 = load %struct.tffs_entry*, %struct.tffs_entry** %7, align 8
  %15 = getelementptr inbounds %struct.tffs_entry, %struct.tffs_entry* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = call i64 @get_header_id(%struct.TYPE_3__* %16)
  %18 = load i64, i64* %6, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %9
  store i32 1, i32* %4, align 4
  br label %46

21:                                               ; preds = %9
  %22 = load i64, i64* %8, align 8
  %23 = add i64 %22, 4
  store i64 %23, i64* %8, align 8
  %24 = load %struct.tffs_entry*, %struct.tffs_entry** %7, align 8
  %25 = getelementptr inbounds %struct.tffs_entry, %struct.tffs_entry* %24, i32 0, i32 0
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %25, align 8
  %27 = call i32 @get_header_len(%struct.TYPE_3__* %26)
  %28 = call i64 @get_walk_size(i32 %27)
  %29 = load i64, i64* %8, align 8
  %30 = add nsw i64 %29, %28
  store i64 %30, i64* %8, align 8
  br label %31

31:                                               ; preds = %21
  %32 = load i64, i64* %8, align 8
  %33 = load i64, i64* @tffs_size, align 8
  %34 = icmp slt i64 %32, %33
  br i1 %34, label %35, label %43

35:                                               ; preds = %31
  %36 = load %struct.tffs_entry*, %struct.tffs_entry** %7, align 8
  %37 = getelementptr inbounds %struct.tffs_entry, %struct.tffs_entry* %36, i32 0, i32 0
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* @TFFS_ID_END, align 8
  %42 = icmp ne i64 %40, %41
  br label %43

43:                                               ; preds = %35, %31
  %44 = phi i1 [ false, %31 ], [ %42, %35 ]
  br i1 %44, label %9, label %45

45:                                               ; preds = %43
  store i32 0, i32* %4, align 4
  br label %46

46:                                               ; preds = %45, %20
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local i32 @parse_entry(i32*, i64, %struct.tffs_entry*) #1

declare dso_local i64 @get_header_id(%struct.TYPE_3__*) #1

declare dso_local i64 @get_walk_size(i32) #1

declare dso_local i32 @get_header_len(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
